src/main/java/demo1/Expr/Expr.g4



grammar Expr;

prog :stat+;

stat : expr NEWLINE
| ID '=' expr NEWLINE
| NEWLINE
;

expr : expr ('*'|'/') expr
| expr ('+' | '-') expr
| INT
| ID
| '(' expr')'
;

ID : [a-zA-Z]+;
INT : [0-9]+;
NEWLINE : 'r'? '\n';
WS :[ \t]+ -> skip;
//todo 学习到这里 62页
